gerrit/gerrit.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cicd
  name: gerrit
  labels:
    app: gerrit
spec:
  selector:
    app: gerrit
  ports:
  - name: gerrit-www
    port: 80
    protocol: TCP
    targetPort: gerrit-www
  - name: gerrit-ssh
    port: 22
    protocol: TCP
    targetPort: gerrit-ssh

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: cicd
  name: gerrit
  labels:
    app: gerrit
spec:
  serviceName: gerrit
  replicas: 1
  selector:
    matchLabels:
      app: gerrit
  template:
    metadata:
      labels:
        app: gerrit
    spec:
      containers:
      - name: gerrit
        image: docker-registry.cezdata.corp/cicd/gerrit
#        command: ["/bin/sleep", "86400"]
        ports:
        - containerPort: 8080
          name: gerrit-www
          protocol: TCP
        - containerPort: 29418
          name: gerrit-ssh
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/gerrit/review_site
#        - name: config
#          mountPath: /var/gerrit/config
#      volumes:
#      - name: config
#        configMap:
#          name: gerrit-cfg
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      storageClassName: ceph
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 50Gi
